--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="row">
           <div class="col-sm-3">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-2 text-center"><i class="fa fa-home fa-5x"></i><h3>Your Window</h3><p>There is other content and snippets of details or features that can be placed here..</p></div>
+              <div class="col-sm-10 col-sm-offset-2 text-center"><i class="fa fa-home fa-5x"></i><h3>Your Window</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
             </div>
           </div>
 
@@ -60,7 +60,7 @@
 
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-1 text-center"><i class="fa fa-group fa-5x"></i><h3>Our Advertisement</h3><p>You may also want to create content that compells users to scroll down more..</p></div>
+              <div class="col-sm-10 col-sm-offset-1 text-center"><i class="fa fa-group fa-5x"></i><h3>Our Advertisement</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
             </div>
           </div>
 
@@ -72,7 +72,7 @@
 
           <div class="col-sm-3 text-center">
             <div class="row">
-              <div class="col-sm-10 text-center"><i class="fa fa-line-chart fa-5x"></i><h3>Make Money</h3><p>In the first 30 seconds of a user's visit to your site they decide if they're going to stay..</p></div>
+              <div class="col-sm-10 text-center"><i class="fa fa-line-chart fa-5x"></i><h3>Make Money</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
             </div>
           </div>
       </div><!--/row-->
