--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </nav>
 
 <section class="container-fluid" id="section1">
-  	<h2 class="text-center v-center">The perfect formula formula for extra cash</h2>
+  	<h2 class="text-center v-center">The perfect formula for extra cash</h2>
 		<h2 class="text-center v-center-sub">We give to our advertisers access to your window</h2>
 
   	<div class="container">
@@ -60,7 +60,7 @@
 
           <div class="col-sm-4 text-center">
             <div class="row">
-              <div class="col-sm-10 col-sm-offset-1 text-center"><i class="fa fa-group fa-5x"></i><h3>Our Advertisement</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
+              <div class="col-sm-10 col-sm-offset-1 text-center"><i class="fa fa-group fa-5x"></i><h3>Our Advertisement Network</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
             </div>
           </div>
 
