--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
+      <a class="navbar-brand navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-right">
@@ -90,26 +90,26 @@
     </div>
 
 		<div class="col-sm-3 text-left">
-			<h1>Passive Income</h1>
+			<h1><i class="fa fa-search fa-5x"></i></h1>
 			<br>
-			<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
+			<p class="lead">1. List Your Windows</p>
 			<br>
 
-			<h1>Passive Income</h1>
+			<h1><i class="fa fa-pie-chart fa-5x"></i></h1>
 			<br>
-			<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
+			<p class="lead">3. Banner is shipped to you</p>
 			<br>
 		</div>
 
 		<div class="col-sm-3 text-left">
-			<h1>Passive Income</h1>
+			<h1><i class="fa fa-bar-chart fa-5x"></i></h1>
 			<br>
-			<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
+			<p class="lead">2. Receive Advertisers offers</p>
 			<br>
 
-			<h1>Passive Income</h1>
+			<h1><i class="fa fa-area-chart fa-5x"></i></h1>
 			<br>
-			<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
+			<p class="lead">4. install the banner on your window and earn monthly</p>
 			<br>
 		</div>
   </div>
