--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-<nav class="navbar navbar-trans navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-trans-initial navbar-fixed-top" id="initial-nav-bar" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
+      <a class="navbar-brand navbar-logo navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-right">
@@ -38,6 +38,32 @@
 
     </div>
   </div>
+</nav>
+
+<nav class="navbar navbar-trans navbar-fixed-top" id="scrolled-nav-bar" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
+		</div>
+		<div class="navbar-collapse collapse" id="navbar-collapsible">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#section1">Home</a></li>
+				<li><a href="#section2">Why Use This?</a></li>
+				<li><a href="#section3">Our Team</a></li>
+				<li><a href="#section4">Pricing</a></li>
+				<li><a href="#section5">Get Started</a></li>
+
+				<li>&nbsp;</li>
+			</ul>
+
+		</div>
+	</div>
 </nav>
 
 <section class="container-fluid" id="section1">
