--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -17,12 +18,6 @@
 <nav class="navbar navbar-trans-initial navbar-fixed-top" id="initial-nav-bar" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
       <a class="navbar-brand navbar-logo navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
@@ -32,7 +27,11 @@
         <li><a href="#section3">Our Team</a></li>
         <li><a href="#section4">Pricing</a></li>
         <li><a href="#section5">Get Started</a></li>
-
+				<li>
+					<a data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+						<i class="fa fa-bars"></i>
+					</a>
+				</li>
         <li>&nbsp;</li>
       </ul>
 
@@ -57,13 +56,22 @@
 				<li><a href="#section3">Our Team</a></li>
 				<li><a href="#section4">Pricing</a></li>
 				<li><a href="#section5">Get Started</a></li>
-
+				<li>
+					<a class="" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+						<i class="fa fa-bars"></i>
+					</a>
+				</li>
 				<li>&nbsp;</li>
 			</ul>
 
 		</div>
 	</div>
 </nav>
+
+<nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
+	hello
+</nav>
+
 
 <section class="container-fluid" id="section1">
   	<h2 class="text-center v-center">The perfect formula for extra cash</h2>
@@ -294,6 +302,7 @@
 	<!-- script references -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
 		<script src="js/scripts.js"></script>
 	</body>
 </html>
