update sidemenu stylings

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     </div>
     <div class="navbar-collapse collapse" id="navbar-collapsible">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#section1">Home</a></li>
+        <!-- <li><a href="#section1">Home</a></li>
         <li><a href="#section2">Why Use This?</a></li>
         <li><a href="#section3">Our Team</a></li>
         <li><a href="#section4">Pricing</a></li>
-        <li><a href="#section5">Get Started</a></li>
+        <li><a href="#section5">Get Started</a></li> -->
 				<li>
-					<a data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+					<a class="side-menu-button" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
 						<i class="fa fa-bars"></i>
 					</a>
 				</li>
@@ -57,7 +57,7 @@
 				<li><a href="#section4">Pricing</a></li>
 				<li><a href="#section5">Get Started</a></li>
 				<li>
-					<a class="" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+					<a class="side-menu-button" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
 						<i class="fa fa-bars"></i>
 					</a>
 				</li>
@@ -68,8 +68,14 @@
 	</div>
 </nav>
 
-<nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
-	hello
+<nav id="myNavmenu" class="navmenu-bg navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
+	<a class="navmenu-brand" href="#">Adzoco</a>
+	<ul class="nav navmenu-nav">
+		<li><a href="">Home</a></li>
+		<li><a href="">Why Use This?</a></li>
+		<li><a href="">Our Team</a></li>
+		<li><a href="">Pricing</a></li>
+	</ul>
 </nav>
 
 
