enabled scrolling on offset menu

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	</div>
 </nav>
 
-<nav id="myNavmenu" class="navmenu-bg navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
+<nav id="myNavmenu" data-disable-scrolling="false" class="navmenu-bg navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
 	<a class="navmenu-brand" href="#">Adzoco</a>
 	<ul class="nav navmenu-nav">
 		<li><a href="">Home</a></li>
