--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
 		<![endif]-->
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
+
 	<body>
 		<div id="blackOverlay" class="black-overlay"></div>
 		<nav class="navbar navbar-trans-initial navbar-fixed-top" id="initial-nav-bar" role="navigation">
-		  <div class="container">
-		    <div class="navbar-header">
-		      <a class="navbar-brand navbar-logo navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
-		    </div>
-		    <div class="navbar-collapse collapse" id="navbar-collapsible">
-		      <ul class="nav navbar-nav navbar-right">
-		        <!-- <li><a href="#section1">Home</a></li>
-		        <li><a href="#section2">Why Use This?</a></li>
-		        <li><a href="#section3">Our Team</a></li>
-		        <li><a href="#section4">Pricing</a></li>
-		        <li><a href="#section5">Get Started</a></li> -->
+			<div class="container">
+				<div class="navbar-header">
+					<a class="navbar-brand navbar-logo navbar-font-size" href="#"><i class="fa fa-paper-plane-o"></i> Adzoco</a>
+				</div>
+				<div class="navbar-collapse collapse" id="navbar-collapsible">
+					<ul class="nav navbar-nav navbar-right">
+						<!-- <li><a href="#section1">Home</a></li>
+						<li><a href="#section2">Why Use This?</a></li>
+						<li><a href="#section3">Our Team</a></li>
+						<li><a href="#section4">Pricing</a></li>
+						<li><a href="#section5">Get Started</a></li> -->
 						<li>
 							<a class="side-menu-button" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
 								<i class="fa fa-bars"></i>
 							</a>
 						</li>
-		        <li>&nbsp;</li>
-		      </ul>
+						<li>&nbsp;</li>
+					</ul>
 
-		    </div>
-		  </div>
+				</div>
+			</div>
 		</nav>
 		<nav class="navbar navbar-trans navbar-fixed-top" id="scrolled-nav-bar" role="navigation">
 			<div class="container">
@@ -68,7 +69,6 @@
 				</div>
 			</div>
 		</nav>
-
 		<nav id="myNavmenu" data-disable-scrolling="false" class="navmenu-bg navmenu navmenu-default navmenu-fixed-right offcanvas" role="navigation">
 			<a class="exit-button text-center" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
 				<i class="fa fa-times"></i>
@@ -134,24 +134,24 @@
 		    </div>
 
 				<div class="col-sm-3 text-left">
-					<h1><i class="fa fa-search fa-5x"></i></h1>
+					<h1><i class="fa fa-search fa-4x"></i></h1>
 					<br>
 					<p class="lead">1. List Your Windows</p>
 					<br>
 
-					<h1><i class="fa fa-pie-chart fa-5x"></i></h1>
+					<h1><i class="fa fa-pie-chart fa-4x"></i></h1>
 					<br>
 					<p class="lead">3. Banner is shipped to you</p>
 					<br>
 				</div>
 
 				<div class="col-sm-3 text-left">
-					<h1><i class="fa fa-bar-chart fa-5x"></i></h1>
+					<h1><i class="fa fa-bar-chart fa-4x"></i></h1>
 					<br>
 					<p class="lead">2. Receive Advertisers offers</p>
 					<br>
 
-					<h1><i class="fa fa-area-chart fa-5x"></i></h1>
+					<h1><i class="fa fa-area-chart fa-4x"></i></h1>
 					<br>
 					<p class="lead">4. install the banner on your window and earn monthly</p>
 					<br>
@@ -164,102 +164,7 @@
 		</section>
 
 		<section class="container-fluid" id="section4">
-			<div class="col-sm-10 col-sm-offset-1">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-4 col-xs-12">
-							<div class="list-group">
-								<a href="#" class="list-group-item active">
-									<h2 class="list-group-item-heading">Basic</h2>
-									<h6>Free to get started</h6>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 100 - more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 2 - this is more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 3 GB</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 4</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Feature</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Feature</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<button class="btn btn-primary btn-lg btn-block">Get Started</button>
-								</a>
-							</div>
-						</div><!--/left-->
-
-						<div class="col-sm-4 col-xs-12">
-							<div class="list-group text-center">
-								<a href="#" class="list-group-item active">
-									<h2 class="list-group-item-heading">Better</h2>
-									<h6>Most popular plan</h6>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 200 - more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 2 - this is more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 5 GB</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 6</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Feature</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Feature</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<button class="btn btn-default btn-lg btn-block">$10 per month</button>
-								</a>
-							</div>
-						</div><!--/middle-->
-
-						<div class="col-sm-4 col-xs-12">
-							<div class="list-group text-right">
-								<a href="#" class="list-group-item active">
-									<h2 class="list-group-item-heading">Best</h2>
-									<h6>For enterprise grade</h6>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 100 - more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 2 - this is more about this</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 8 GB</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Option 10</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Unlimited</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<p class="list-group-item-text">Unlimited</p>
-								</a>
-								<a href="#" class="list-group-item">
-									<button class="btn btn-default btn-lg btn-block">$20 per month</button>
-								</a>
-							</div>
-						</div><!--/right-->
-
-					</div><!--/row-->
-				</div><!--/container-->
-			</div>
+			<h1 class="text-center">Pricing</h1>
 		</section>
 
 		<section class="container-fluid" id="section5">
