--- a/index.html
+++ b/index.html
@@ -90,38 +90,31 @@
 
 		  	<div class="container">
 		      <div class="row">
-		          <div class="col-sm-3">
-		            <div class="row">
-		              <div class="col-sm-10 col-sm-offset-2 text-center"><i class="fa fa-home fa-5x"></i><h3>Your Window</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
-		            </div>
+		          <div id="sec1-window" class="col-sm-3">
+		              <div class="col-sm-10 col-sm-offset-2 text-center"><img src="res/sec1-img1.png"><h3>Your Window</h3></div>
 		          </div>
 
-							<div class="col-sm-1">
+							<div id="sec1-plus" class="col-sm-1">
 								<div class="row">
 									<div class="col-sm-10 col-sm-offset-2 text-center"><span class="equal-sign-font">+</span></div>
 								</div>
 							</div>
 
-		          <div class="col-sm-4 text-center">
-		            <div class="row">
-		              <div class="col-sm-10 col-sm-offset-1 text-center"><i class="fa fa-group fa-5x"></i><h3>Our Advertisement Network</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
-		            </div>
+		          <div id="sec1-adv" class="col-sm-4 text-center">
+		              <div class="col-sm-10 col-sm-offset-1 text-center"><img class="sec1-img2" src="res/sec1-img2.png"><h3>Our Advertisement Network</h3></div>
 		          </div>
 
-							<div class="col-sm-1">
-								<div class="row">
+							<div id="sec1-equal" class="col-sm-1">
 									<div class="col-sm-10 col-sm-offset-1 text-center"><span class="equal-sign-font">=</span></div>
-								</div>
 							</div>
 
-		          <div class="col-sm-3 text-center">
-		            <div class="row">
-		              <div class="col-sm-10 text-center"><i class="fa fa-line-chart fa-5x"></i><h3>Make Money</h3><p>orem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
-		            </div>
+		          <div id="sec1-money" class="col-sm-3 text-center">
+		              <div class="col-sm-10 text-center"><img class="sec1-img3" src="res/sec1-img3.png"><h3>Make Money</h3></div>
 		          </div>
-		      </div><!--/row-->
+		      </div>
 		    <div class="row"><br></div>
-		  </div><!--/container-->
+		  </div>
+
 		</section>
 
 		<section class="container-fluid" id="section2">
@@ -129,42 +122,98 @@
 		  	<div class="col-sm-6 text-left">
 		        <h1>Passive Income</h1>
 		        <br>
-				<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
+						<p class="lead"><i>\'pa-siv 'in-kam\</i></p>
+						<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
 		        <br>
 		    </div>
 
 				<div class="col-sm-3 text-left">
-					<h1><i class="fa fa-search fa-4x"></i></h1>
-					<br>
-					<p class="lead">1. List Your Windows</p>
-					<br>
-
-					<h1><i class="fa fa-pie-chart fa-4x"></i></h1>
-					<br>
-					<p class="lead">3. Banner is shipped to you</p>
-					<br>
+					<div id="sec2-img1">
+						<img class="sec2-img" src="res/sec2-img1.png">
+						<br>
+						<p class="lead">1. List Your Windows</p>
+						<br>
+					</div>
+					<div id="sec2-img3">
+						<img class="sec2-img" src="res/sec2-img2.png">
+						<br>
+						<p class="lead">3. Banner is shipped to you</p>
+						<br>
+					</div>
 				</div>
 
 				<div class="col-sm-3 text-left">
-					<h1><i class="fa fa-bar-chart fa-4x"></i></h1>
-					<br>
-					<p class="lead">2. Receive Advertisers offers</p>
-					<br>
+					<div id="sec2-img2">
+						<img class="sec2-img" src="res/sec2-img3.png">
+						<br>
+						<p class="lead">2. Receive Advertisers offers</p>
+						<br>
+					</div>
 
-					<h1><i class="fa fa-area-chart fa-4x"></i></h1>
-					<br>
-					<p class="lead">4. install the banner on your window and earn monthly</p>
-					<br>
+					<div id="sec2-img4">
+						<img class="sec2-img" src="res/sec2-img4.png">
+						<br>
+						<p class="lead">4. Install the banner on your window and earn monthly</p>
+						<br>
+					</div>
+
+
 				</div>
 		  </div>
 		</section>
 
 		<section class="container-fluid" id="section3">
-			<h1 class="text-center">Our Team</h1>
+			<h2 class="text-center">What we have to offer you</h2>
+			<h3 class="text-center">Meet our advertising network</h3>
+			<br>
+			<div class="col-sm-4 text-center">
+				<div id="sec3-img1">
+					<img class="sec3-img" src="res/sec3-img2.png">
+					<h3>Multinational Companies</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+					</p>
+
+				</div>
+				<br>
+				<div id="sec3-img2">
+					<img class="sec3-img" src="res/sec3-img3.png">
+					<h3>Real-time offer bidding</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+					</p>
+				</div>
+
+			</div>
+			<div class="col-sm-4 text-center">
+				<img src="res/sec3-img1.png">
+			</div>
+			<div class="col-sm-4 text-center">
+				<div id="sec3-img3">
+					<img class="sec3-img" src="res/sec3-img4.png">
+					<h3>Mobile App for being updated everywhere you are</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+					</p>
+				</div>
+
+				<br>
+				<div id="sec3-img4">
+					<img class="sec3-img" src="res/sec3-img5.png">
+					<h3>Marketing tools to promote your window listing</h3>
+					<p>
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+					</p>
+				</div>
+
+			</div>
 		</section>
 
 		<section class="container-fluid" id="section4">
 			<h1 class="text-center">Pricing</h1>
+			<!-- <div class="video-container">
+				<iframe src="https://www.youtube.com/embed/hC7pcCBXjzs?modestbranding=1&autohide=1&showinfo=0&controls=0&vq=hd720" frameborder="0" allowfullscreen class="video"></iframe>
+			</div> -->
 		</section>
 
 		<section class="container-fluid" id="section5">
