--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		              <div class="col-sm-10 col-sm-offset-2 text-center"><img src="res/sec1-img1.png"><h3>Your Window</h3></div>
 		          </div>
 
-							<div id="sec1-plus" class="col-sm-1">
+							<div id="sec1-plus" class="col-sm-1 sec1-symbols">
 								<div class="row">
 									<div class="col-sm-10 col-sm-offset-2 text-center"><span class="equal-sign-font">+</span></div>
 								</div>
@@ -104,7 +104,7 @@
 		              <div class="col-sm-10 col-sm-offset-1 text-center"><img class="sec1-img2" src="res/sec1-img2.png"><h3>Our Advertisement Network</h3></div>
 		          </div>
 
-							<div id="sec1-equal" class="col-sm-1">
+							<div id="sec1-equal" class="col-sm-1 sec1-symbols">
 									<div class="col-sm-10 col-sm-offset-1 text-center"><span class="equal-sign-font">=</span></div>
 							</div>
 
@@ -166,51 +166,65 @@
 			<h2 class="text-center">What we have to offer you</h2>
 			<h3 class="text-center">Meet our advertising network</h3>
 			<br>
-			<div class="col-sm-4 text-center">
-				<div id="sec3-img1">
-					<img class="sec3-img" src="res/sec3-img2.png">
-					<h3>Multinational Companies</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-					</p>
+			<div class="row">
+				<div class="col-sm-4 text-center">
+					<div id="sec3-img1">
+						<img class="sec3-img" src="res/sec3-img2.png">
+						<h3>Multinational Companies</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						</p>
+
+					</div>
+					<br>
+					<div id="sec3-img2">
+						<img class="sec3-img" src="res/sec3-img3.png">
+						<h3>Real-time offer bidding</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+						</p>
+					</div>
 
 				</div>
-				<br>
-				<div id="sec3-img2">
-					<img class="sec3-img" src="res/sec3-img3.png">
-					<h3>Real-time offer bidding</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-					</p>
+				<div class="col-sm-4 text-center">
+					<img src="res/sec3-img1.png">
 				</div>
+				<div class="col-sm-4 text-center">
+					<div id="sec3-img3">
+						<img class="sec3-img" src="res/sec3-img4.png">
+						<h3>Mobile App for being updated everywhere you are</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						</p>
+					</div>
 
+					<br>
+					<div id="sec3-img4">
+						<img class="sec3-img" src="res/sec3-img5.png">
+						<h3>Marketing tools to promote your window listing</h3>
+						<p>
+							Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+						</p>
+					</div>
+
+				</div>
 			</div>
-			<div class="col-sm-4 text-center">
-				<img src="res/sec3-img1.png">
-			</div>
-			<div class="col-sm-4 text-center">
-				<div id="sec3-img3">
-					<img class="sec3-img" src="res/sec3-img4.png">
-					<h3>Mobile App for being updated everywhere you are</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-					</p>
-				</div>
 
-				<br>
-				<div id="sec3-img4">
-					<img class="sec3-img" src="res/sec3-img5.png">
-					<h3>Marketing tools to promote your window listing</h3>
-					<p>
-						Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-					</p>
-				</div>
-
-			</div>
 		</section>
 
 		<section class="container-fluid" id="section4">
-			<h1 class="text-center">Pricing</h1>
+			<div class="row">
+				<div id="sec4-img1" class="col-sm-4 text-left">
+					<h2>Receive monthly payments from our advertisers</h2>
+					<p>
+						<b>Watching us make you more money out of your existing traffic is priceless.</b>
+						Everything we do is trackable, measurable, and accurate to the dollar, so you can stop guessing and know your ROI in real-time.
+					</p>
+				</div>
+				<div id="sec4-img2"class="col-sm-8 text-left">
+					<img src="res/sec4-img1.png">
+				</div>
+			</div>
 			<!-- <div class="video-container">
 				<iframe src="https://www.youtube.com/embed/hC7pcCBXjzs?modestbranding=1&autohide=1&showinfo=0&controls=0&vq=hd720" frameborder="0" allowfullscreen class="video"></iframe>
 			</div> -->
