design-v2: update banner

--- a/index.html
+++ b/index.html
@@ -86,34 +86,8 @@
 
 		<section class="container-fluid" id="section1">
 		  	<h2 class="text-center v-center">The perfect formula for extra cash</h2>
-				<h2 class="text-center v-center-sub">We give to our advertisers access to your window</h2>
-
-		  	<div class="container">
-		      <div class="row">
-		          <div id="sec1-window" class="col-sm-3">
-		              <div class="col-sm-10 col-sm-offset-2 text-center"><img src="res/sec1-img1.png"><h3>Your Window</h3></div>
-		          </div>
-
-							<div id="sec1-plus" class="col-sm-1 sec1-symbols">
-								<div class="row">
-									<div class="col-sm-10 col-sm-offset-2 text-center"><span class="equal-sign-font">+</span></div>
-								</div>
-							</div>
-
-		          <div id="sec1-adv" class="col-sm-4 text-center">
-		              <div class="col-sm-10 col-sm-offset-1 text-center"><img class="sec1-img2" src="res/sec1-img2.png"><h3>Our Advertisement Network</h3></div>
-		          </div>
-
-							<div id="sec1-equal" class="col-sm-1 sec1-symbols">
-									<div class="col-sm-10 col-sm-offset-1 text-center"><span class="equal-sign-font">=</span></div>
-							</div>
-
-		          <div id="sec1-money" class="col-sm-3 text-center">
-		              <div class="col-sm-10 text-center"><img class="sec1-img3" src="res/sec1-img3.png"><h3>Make Money</h3></div>
-		          </div>
-		      </div>
-		    <div class="row"><br></div>
-		  </div>
+				<h2 class="text-center v-center-sub">and We give to our Advertisers the access to your Window Space.</h2>
+				<!-- <img src="res/Building.png"> -->
 
 		</section>
 
