--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css">
+		<script src="http://cdn.jsdelivr.net/interact.js/1.2.6/interact.min.js"></script>
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -84,10 +85,28 @@
 		</nav>
 
 
-		<section class="container-fluid" id="section1">
-		  	<h2 class="text-center v-center">The perfect formula for extra cash</h2>
-				<h2 class="text-center v-center-sub">and We give to our Advertisers the access to your Window Space.</h2>
-				<!-- <img src="res/Building.png"> -->
+		<section class="container-fluid resize-container" id="section1">
+				<!-- <div class="banner-text">
+					<h2 class="text-center v-center">The perfect formula for extra cash</h2>
+					<h2 class="text-center v-center-sub">and We give to our Advertisers the access to your Window Space.</h2>
+				</div> -->
+				<!-- <div class="row">
+					<div class="col-sm-12 text-center">
+						<img src="res/Building.png">
+					</div>
+				</div> -->
+
+				<div id="flashes" class="title-back">
+					<h1>The perfect formula for extra cash</h1>
+					<h1>We give to our Advertisers the access to your Window Space.</h1>
+				</div>
+				<div id="resize-content" class="resize-drag">
+					<div class="test-title" id="flashes2">
+						<h1>The perfect formula for extra cash</h1>
+						<h1>We give to our Advertisers the access to your Window Space.</h1>
+					</div>
+				</div>
+
 
 		</section>
 
