--- a/index.html
+++ b/index.html
@@ -96,14 +96,16 @@
 					</div>
 				</div> -->
 
-				<div id="flashes" class="title-back">
-					<h1>The perfect formula for extra cash</h1>
-					<h1>We give to our Advertisers the access to your Window Space.</h1>
+				<div class="title-back">
+					<h2>The perfect formula for extra cash</h2>
+					<h2>We give to our Advertisers the access to your Window Space.</h2>
+					<img id="myImage1" class="test-image" src="res/new-window-1.png">
 				</div>
 				<div id="resize-content" class="resize-drag">
 					<div class="test-title" id="flashes2">
-						<h1>The perfect formula for extra cash</h1>
-						<h1>We give to our Advertisers the access to your Window Space.</h1>
+						<h2>The perfect formula for extra cash</h2>
+						<h2>We give to our Advertisers the access to your Window Space.</h2>
+						<img id="myImage" class="test-image" src="res/new-window-1.png">
 					</div>
 				</div>
 
