--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		<link href="css/styles.css" rel="stylesheet">
+		<link href="css/animate.min.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -84,122 +85,200 @@
 			</ul>
 		</nav>
 
-
 		<section class="container-fluid resize-container" id="section1">
-				<!-- <div class="banner-text">
-					<h2 class="text-center v-center">The perfect formula for extra cash</h2>
-					<h2 class="text-center v-center-sub">and We give to our Advertisers the access to your Window Space.</h2>
-				</div> -->
-				<!-- <div class="row">
-					<div class="col-sm-12 text-center">
-						<img src="res/Building.png">
+				<div id="mobile-view">
+					<div class="title-back-mobile">
+						<div class="test-title-mobile" id="flashes2">
+							<h2><b>The perfect solution<br> for your extra Cash!</b></h2>
+							<h3>and We give the chance for<br> you to connect your Window<br> Space to our Advertising <br>Partners.</h3>
+						</div>
 					</div>
-				</div> -->
 
-				<div class="title-back">
-					<h2>The perfect formula for extra cash</h2>
-					<h2>We give to our Advertisers the access to your Window Space.</h2>
-					<img id="myImage1" class="test-image" src="res/new-window-1.png">
-				</div>
-				<div id="resize-content" class="resize-drag">
-					<div class="test-title" id="flashes2">
-						<h2>The perfect formula for extra cash</h2>
-						<h2>We give to our Advertisers the access to your Window Space.</h2>
-						<img id="myImage" class="test-image" src="res/new-window-1.png">
+					<div id="resize-content-mobile" class="resize-drag-mobile">
+						<div class="test-title-mobile" id="flashes2">
+							<h2><b>The perfect solution<br> for your extra Cash!</b></h2>
+							<h3>and We give the chance for<br> you to connect your Window<br> Space to our Advertising <br>Partners.</h3>
+						</div>
 					</div>
 				</div>
 
+				<div id="desktop-view">
+					<div class="title-back">
+						<div class="test-title" id="flashes2">
+							<div class="test-title-header"><h2><b>The perfect solution for your extra Cash!</b></h2></div>
+
+							<h3>and We give the chance for you to connect your Window Space to our Advertising Partners.</h3>
+						</div>
+					</div>
+
+					<div id="resize-content" class="resize-drag">
+						<div class="test-title" id="flashes2">
+							<div class="test-title-header"><h2><b>The perfect solution for your extra Cash!</b></h2></div>
+
+							<h3>and We give the chance for you to connect your Window Space to our Advertising Partners.</h3>
+						</div>
+					</div>
+				</div>
+		</section>
+
+		<section class="container-fluid bg-lightblue" id="pre-section">
+
+			<!-- <div class="row">
+				<div class="col-sm-12 text-center">
+					<img id="sec2-img1" class="sec2-img" src="res/new/adzoco-video.png">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/hC7pcCBXjzs" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div> -->
+
+			<div class="">
+				<!-- Copy & Pasted from YouTube -->
+				<!-- <iframe width="560" height="349" src="http://www.youtube.com/embed/hC7pcCBXjzs?rel=0&hd=1&controls=0" frameborder="0" allowfullscreen></iframe> -->
+			</div>
+
+			<!-- <div class="row">
+				<div class="col-sm-12 text-center">
+					<h1><b>HOW IT WORKS</b></h1>
+					<h2>Meet our Advertising Network and Give the Best we Offer.</h2>
+				</div>
+			</div> -->
 
 		</section>
 
 		<section class="container-fluid" id="section2">
+			<!-- <div class="row">
+				<div class="col-sm-12 text-center section2-header-text">
+					<h2><b>"We promote your Window AD <br>Space for a Quick Cash!"</b></h2>
+				</div>
+			</div> -->
+			<br>
 		  <div class="row">
-		  	<div class="col-sm-6 text-left">
-		        <h1>Passive Income</h1>
-		        <br>
-						<p class="lead"><i>\'pa-siv 'in-kam\</i></p>
-						<p class="lead">Passive income is an income received on a regular basis, with little effort required to maintain it.</p>
-		        <br>
-		    </div>
 
-				<div class="col-sm-3 text-left">
-					<div id="sec2-img1">
-						<img class="sec2-img" src="res/sec2-img1.png">
-						<br>
-						<p class="lead">1. List Your Windows</p>
-						<br>
-					</div>
-					<div id="sec2-img3">
-						<img class="sec2-img" src="res/sec2-img2.png">
-						<br>
-						<p class="lead">3. Banner is shipped to you</p>
-						<br>
+				<div class="col-sm-4 text-left">
+					<div class="sec2-img-center">
+						<img id="sec2-img1" class="animated pulse sec2-img" src="res/new/circle-1.png">
 					</div>
 				</div>
 
-				<div class="col-sm-3 text-left">
-					<div id="sec2-img2">
-						<img class="sec2-img" src="res/sec2-img3.png">
-						<br>
-						<p class="lead">2. Receive Advertisers offers</p>
-						<br>
-					</div>
+				<div id="section2-header" class="col-sm-4 text-center section2-header-text">
+					<h2><b>"We promote your Window AD Space for a Quick Cash!"</b></h2>
 
-					<div id="sec2-img4">
-						<img class="sec2-img" src="res/sec2-img4.png">
-						<br>
-						<p class="lead">4. Install the banner on your window and earn monthly</p>
-						<br>
-					</div>
+				</div>
 
+				<div class="col-sm-4 text-left">
+					<div class="sec2-img-center">
+						<img id="sec2-img3" class="sec2-img" src="res/new/circle-3.png">
+					</div>
 
 				</div>
 		  </div>
+
+			<div class="row">
+
+				<div class="col-sm-5 text-left">
+					<div id="sec2-text1" class="sec2-text-justify">
+						<div class="row">
+							<div class="col-sm-2 text-callout-number"><div id="sec2-img1-callout" class="animated pulse text-callou-number-bg bg-skyblue">1</div></div>
+							<div class="col-sm-10 text-callout-text"><b>Window Property Owner</b> is starting to <b>Sign-Up</b> for showcasing their Window Space Availability for Fast approval and Quick Easy Cash.</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-2 text-left">
+
+
+				</div>
+
+				<div class="col-sm-5 text-left">
+					<div id="sec2-text1" class="sec2-text-justify">
+							<div class="row">
+								<div class="col-sm-2 text-callout-number"><div id="sec2-img3-callout" class="text-callou-number-bg bg-lightblue">3</div></div>
+								<div class="col-sm-10 text-callout-text"><b>Advertiser Group</b> is interested in putting AD campaign poster
+									to your potential Window space available in exchange for Cash.</div>
+
+							</div>
+
+					</div>
+
+				</div>
+			</div>
+			<br>
+			<div class="row">
+
+				<div class="col-sm-5 text-left">
+					<div class="sec2-text-justify">
+							<div class="row">
+								<div class="col-sm-2 text-callout-number"><div id="sec2-img2-callout" class="text-callou-number-bg bg-green">2</div></div>
+								<div class="col-sm-10 text-callout-text"><b>Adzoco Company</b> is making a full work showcasing
+									Property Window Listing negotiations from the Advertiser.</div>
+
+							</div>
+
+					</div>
+				</div>
+
+				<div class="col-sm-2 text-left">
+
+
+				</div>
+
+				<div class="col-sm-5 text-left">
+					<div class="sec2-text-justify">
+						<div class="row">
+							<div class="col-sm-2 text-callout-number"><div id="sec2-img4-callout" class="text-callou-number-bg bg-orange">4</div></div>
+							<div class="col-sm-10 text-callout-text"><b>Adzoco Marketing Team</b> are promoting Window Space on <b>Social Media</b>
+								 from the existing Window AD installed and its Availability.</div>
+
+							</div>
+
+					</div>
+
+				</div>
+			</div>
+
+
+			<div class="row">
+
+				<div class="col-sm-4 text-left">
+					<div class="sec2-img-center">
+						<img id="sec2-img2"class="sec2-img" src="res/new/circle-2.png">
+					</div>
+				</div>
+
+				<div class="col-sm-4 text-left">
+
+				</div>
+
+				<div class="col-sm-4 text-left">
+					<div class="sec2-img-center">
+						<img id="sec2-img4" class="sec2-img" src="res/new/circle-4.png">
+					</div>
+
+				</div>
+			</div>
+			<img id="money-splash" class="sec23-money-splash" src="res/new/money-splash.png">
 		</section>
 
 		<section class="container-fluid" id="section3">
-			<h2 class="text-center">What we have to offer you</h2>
-			<h3 class="text-center">Meet our advertising network</h3>
-			<br>
+
 			<div class="row">
-				<div class="col-sm-4 text-center">
-					<div id="sec3-img1">
-						<img class="sec3-img" src="res/sec3-img2.png">
-						<h3>Multinational Companies</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-						</p>
 
-					</div>
-					<br>
-					<div id="sec3-img2">
-						<img class="sec3-img" src="res/sec3-img3.png">
-						<h3>Real-time offer bidding</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				<div class="col-sm-6 text-left">
+					<div class="sec3-text-justify">
+						<h2><b>Receive Passive</b> monthly payments from our Advertisers.</h2>
+						<p>Window Property Owner is receiving money out of hassle traffic and became more priceless.
+							We do trackable-measurable and accurate to the money you receive montly.
+							We want you to stop guessing and better know your ROI in real time.
 						</p>
+						<br><br>
+						<button class="btn btn-primary btn-lg btn-block">Get Started!</button>
 					</div>
 
 				</div>
-				<div class="col-sm-4 text-center">
-					<img src="res/sec3-img1.png">
-				</div>
-				<div class="col-sm-4 text-center">
-					<div id="sec3-img3">
-						<img class="sec3-img" src="res/sec3-img4.png">
-						<h3>Mobile App for being updated everywhere you are</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						</p>
-					</div>
 
-					<br>
-					<div id="sec3-img4">
-						<img class="sec3-img" src="res/sec3-img5.png">
-						<h3>Marketing tools to promote your window listing</h3>
-						<p>
-							Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-						</p>
+				<div class="col-sm-6 text-left">
+					<div class="sec3-img-left">
+						<img id="man-relax" class="animated infinite bounce sec3-img" src="res/new/man-relax.png">
+						<img class="sec3-img" src="res/new/man-relax-shadow.png">
 					</div>
 
 				</div>
@@ -209,25 +288,20 @@
 
 		<section class="container-fluid" id="section4">
 			<div class="row">
-				<div id="sec4-img1" class="col-sm-4 text-left">
-					<h2>Receive monthly payments from our advertisers</h2>
-					<p>
-						<b>Watching us make you more money out of your existing traffic is priceless.</b>
-						Everything we do is trackable, measurable, and accurate to the dollar, so you can stop guessing and know your ROI in real-time.
-					</p>
+
+				<div class="col-sm-12 text-center">
+					<h1>Ready to learn how we can <b>GET INSTANT CASH</b>?</h1>
+					<h2>Signup for an Account.</h2>
+					<h2>Help to post your Window AD Space?  <button class="btn btn-warning btn-lg">TRY IT NOW!</button></h2>
+
 				</div>
-				<div id="sec4-img2"class="col-sm-8 text-left">
-					<img src="res/sec4-img1.png">
-				</div>
+
 			</div>
-			<!-- <div class="video-container">
-				<iframe src="https://www.youtube.com/embed/hC7pcCBXjzs?modestbranding=1&autohide=1&showinfo=0&controls=0&vq=hd720" frameborder="0" allowfullscreen class="video"></iframe>
-			</div> -->
 		</section>
 
-		<section class="container-fluid" id="section5">
-			<h1 class="text-center">Get Started</h1>
-		</section>
+		<!-- <section class="container-fluid" id="section5">
+
+		</section> -->
 
 
 		<footer id="footer">
@@ -277,6 +351,10 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/section2.js"></script>
+		<script src="js/navbar.js"></script>
+		<script src="js/sidebar.js"></script>
+		<script src="js/section1-experimental.js"></script>
 	</body>
 </html>
